fixed home page image alignment

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -172,8 +172,8 @@
       font-size: 1rem;
   }
 
-  .imgContainer img{
-    width: 5rem;
+  .homeimgContainer img{
+    width: 20rem;
   }
 }
 
